fix that copyright is covered by duoshuo box

--- a/assets/themes/pure/css/ever.scss
+++ b/assets/themes/pure/css/ever.scss
@@ -139,6 +139,7 @@ a {
 .footer {
     text-align: center;
     height: 2rem;
+    margin-top: 30px;
 }
 
 .divider {
